--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,7 @@
     <version>1.0.4</version>
     <packaging>war</packaging>
     <name>jvue</name>
-    <description>Next light-weight,responsive project With Vue,webpack,Spring Boot and eclipse j2v8 Script engine for
-        server-side-rendering
-    </description>
+    <description>Next light-weight,responsive project With Vue,webpack,Spring Boot and eclipse j2v8 Script engine for server-side-rendering</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -38,6 +36,39 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <!-- fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+        <!-- guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
+        <!-- commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <!-- 文件处理 -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <!-- j2v8 -->
+        <!-- j2v8_linux_x86_64 -->
+        <dependency>
+            <groupId>com.eclipsesource.j2v8</groupId>
+            <artifactId>j2v8_linux_x86_64</artifactId>
+            <version>4.8.3</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/libs/j2v8_linux_x86_64-4.8.3.jar</systemPath>
         </dependency>
 
         <!-- tomcat -->
@@ -64,19 +95,22 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.terwergreen.jvue.CLI</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <!-- aliyun -->
-        <repository>
-            <id>aliyunmaven</id>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-        </repository>
-        <!-- Easy to use package repository for Git -->
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
 </project>
