--- a/pom.xml
+++ b/pom.xml
@@ -62,13 +62,18 @@
             <version>2.6</version>
         </dependency>
         <!-- j2v8 -->
-        <!-- j2v8_linux_x86_64 -->
+        <!-- j2v8_linux_x86_64
         <dependency>
             <groupId>com.eclipsesource.j2v8</groupId>
             <artifactId>j2v8_linux_x86_64</artifactId>
             <version>4.8.3</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/libs/j2v8_linux_x86_64-4.8.3.jar</systemPath>
+        </dependency>
+        -->
+        <!-- j2v8_win32_x86_64 -->
+        <dependency>
+            <groupId>com.eclipsesource.j2v8</groupId>
+            <artifactId>j2v8_win32_x86_64</artifactId>
+            <version>4.8.3</version>
         </dependency>
 
         <!-- tomcat -->
