--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -10,7 +10,8 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
+    "precommit": "yarn run lint",
+    "lintfix": "yarn run lint --fix",
     "test": "jest"
   },
   "dependencies": {
