--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# 解决Spring Boot部署到Tomcat中文乱码
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.force=true
+spring.http.encoding.enabled=true
