--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,21 @@
         <!-- War包名称 -->
         <finalName>jvue</finalName>
 
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/vue</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <!-- 服务端渲染 -->
+                    <include>dist/**</include>
+                </includes>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
