--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -26,6 +26,7 @@
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "cp-ssr-module-vue": "scp -r node_modules/vue/ dist/node_modules",
+    "cp-ssr-module-vue-router": "scp -r node_modules/vue-router/ dist/node_modules",
     "cp-ssr-module-he": "scp -r node_modules/he/ dist/node_modules",
     "cp-ssr-module-pseudomap": "scp -r node_modules/pseudomap/ dist/node_modules",
     "cp-ssr-module-lru-cache": "scp -r node_modules/lru-cache/ dist/node_modules",
@@ -35,7 +36,7 @@
     "cp-ssr-module-lodash._reinterpolate": "scp -r node_modules/lodash._reinterpolate/ dist/node_modules",
     "cp-ssr-module-lodash.template": "scp -r node_modules/lodash.template/ dist/node_modules",
     "cp-ssr-module-vue-server-renderer": "scp -r node_modules/vue-server-renderer/ dist/node_modules",
-    "cp-ssr-modules": "mkdir dist/node_modules && yarn cp-ssr-module-vue && yarn cp-ssr-module-he && yarn cp-ssr-module-pseudomap && yarn cp-ssr-module-lru-cache && yarn cp-ssr-module-resolve && yarn cp-ssr-module-serialize-javascript && yarn cp-ssr-module-lodash.templatesettings && yarn cp-ssr-module-lodash._reinterpolate && yarn cp-ssr-module-lodash.template && yarn cp-ssr-module-vue-server-renderer",
+    "cp-ssr-modules": "mkdir dist/node_modules && yarn cp-ssr-module-vue  && yarn cp-ssr-module-vue-router && yarn cp-ssr-module-he && yarn cp-ssr-module-pseudomap && yarn cp-ssr-module-lru-cache && yarn cp-ssr-module-resolve && yarn cp-ssr-module-serialize-javascript && yarn cp-ssr-module-lodash.templatesettings && yarn cp-ssr-module-lodash._reinterpolate && yarn cp-ssr-module-lodash.template && yarn cp-ssr-module-vue-server-renderer",
     "build:ssr": "babel src/server.js -o dist/server.js --presets=@babel/preset-env",
     "test": "echo 'No Tests'"
   },
