--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,9 +14,9 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappi
 # ================================================
 #                   项目基本配置
 # ================================================
-bugucms.web.admin-path=a
+jvue.web.admin-path=a
 # admin密码是否明文存储
-bugucms.admin.password.encode.enable=true
+jvue.admin.password.encode.enable=true
 
 # ================================================
 #                  DataSource配置
