--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -29,10 +29,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "lru-cache": "latest",
+    "lru-cache": "4.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
-    "vue-server-renderer": "^2.6.6"
+    "vue-server-renderer": "^2.6.6",
+    "vuex": "^3.1.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -46,6 +48,7 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-vue": "^5.1.0",
+    "express": "4.15.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.3",
@@ -56,7 +59,6 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2",
-    "express": "latest"
+    "webpack-node-externals": "^1.7.2"
   }
 }
