--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -32,9 +32,7 @@
     "lru-cache": "4.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
-    "vue-server-renderer": "^2.6.6",
-    "vuex": "^3.1.0",
-    "vuex-router-sync": "^5.0.0"
+    "vue-server-renderer": "^2.6.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
