Server-side-rendering server Ok

--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "lint": "eslint --ext .js,.vue,.html --ignore-path .gitignore --ignore-pattern !.eslintrc.js --ignore-pattern !.babelrc.js . --fix --color",
-    "serve": "cross-env NODE_ENV=serve webpack-dev-server --config build/webpack.client.config.js --port 8888 --hot --inline --progress",
+    "serve": "cross-env NODE_ENV=development SSR_ENV=c webpack-dev-server --config build/webpack.client.config.js --port 8888 --hot --inline --progress",
     "build-dev": "./build/build.dev.sh",
     "dev": "yarn build-dev && node ./test/dev-server.js",
     "build": "./build/build.prod.sh",
