Both client and server fetch data success but rendered twice

--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -21,7 +21,7 @@
     "lint": "eslint --ext .js,.vue,.html --ignore-path .gitignore --ignore-pattern !.eslintrc.js --ignore-pattern !.babelrc.js . --fix --color",
     "serve": "cross-env NODE_ENV=development SSR_ENV=c webpack-dev-server --config build/webpack.client.config.js --port 8888 --hot --inline --progress",
     "build-dev": "./build/build.dev.sh",
-    "dev": "yarn build-dev && nodemon ./test/dev-server.js",
+    "dev": "yarn build-dev && yarn nodemon ./test/dev-server.js",
     "build": "./build/build.prod.sh",
     "prod": "yarn build && node ./test/dev-server.js",
     "start": "node ./test/v8-server.js",
@@ -50,6 +50,7 @@
     "express": "4.15.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.10",
     "rimraf": "^2.6.3",
     "serve-favicon": "^2.5.0",
     "vue-loader": "^15.6.2",
