--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.13",
     "lru-cache": "4.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
@@ -42,6 +44,8 @@
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
+    "cssnano": "^4.1.10",
     "eslint": "^5.13.0",
     "eslint-config-google": "^0.12.0",
     "eslint-loader": "^2.1.2",
@@ -50,10 +54,16 @@
     "express": "4.15.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
     "serve-favicon": "^2.5.0",
+    "style-loader": "^0.23.1",
     "vue-loader": "^15.6.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.6",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
