--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -31,18 +31,25 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
+    "debug": "^4.1.1",
     "lru-cache": "4.1.0",
+    "source-map": "^0.7.3",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.6",
-    "vue-web-storage": "^3.0.0"
+    "vue-web-storage": "^3.0.0",
+    "yallist": "^3.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.10",
@@ -52,6 +59,7 @@
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-vue": "^5.1.0",
     "express": "4.15.3",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -62,6 +70,7 @@
     "sass-loader": "^7.1.0",
     "serve-favicon": "^2.5.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.6",
