--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -21,8 +21,12 @@
     "lint": "cross-env NODE_ENV=production SSR_ENV=ssrs eslint --ext .js,.vue,.html --ignore-path .gitignore --ignore-pattern !.eslintrc.js --ignore-pattern !.babelrc.js . --fix --color",
     "lint-css": "stylelint --config stylelint.config.js 'src/**/*.css' --fix --color",
     "serve": "cross-env NODE_ENV=development SSR_ENV=c webpack-dev-server --config build/webpack.client.config.js --port 8888 --hot --inline --progress",
+    "build-entry-client-dev": "cross-env NODE_ENV=development SSR_ENV=ssrc webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build-entry-server-dev": "cross-env NODE_ENV=development SSR_ENV=ssrs webpack --config build/webpack.server.config.js --progress --hide-modules",
     "build-dev": "./build/build.dev.sh",
     "dev": "yarn build-dev && yarn nodemon ./test/dev-server.js",
+    "build-entry-client-prod": "cross-env NODE_ENV=production SSR_ENV=ssrc webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build-entry-server-prod": "cross-env NODE_ENV=production SSR_ENV=ssrs webpack --config build/webpack.server.config.js --progress --hide-modules",
     "build": "./build/build.prod.sh",
     "prod": "yarn build && node ./test/dev-server.js",
     "start": "node ./test/v8-server.js",
@@ -62,6 +66,7 @@
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-vue": "^5.1.0",
     "express": "4.15.3",
+    "extract-css-chunks-webpack-plugin": "^3.3.2",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
