--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf dist",
-    "lint": "cross-env NODE_ENV=production SSR_ENV=ssrs eslint --ext .js,.vue,.html --ignore-path .gitignore --ignore-pattern !.eslintrc.js --ignore-pattern !.babelrc.js . --fix --color",
+    "lint": "eslint --ext .js,.vue,.html --ignore-path .gitignore --ignore-pattern !.eslintrc.js --ignore-pattern !.babelrc.js . --fix --color",
     "lint-css": "stylelint --config stylelint.config.js 'src/**/*.css' --fix --color",
     "serve": "cross-env NODE_ENV=development SSR_ENV=c webpack-dev-server --config build/webpack.client.config.js --port 8888 --hot --inline --progress",
     "build-entry-client-dev": "cross-env NODE_ENV=development SSR_ENV=ssrc webpack --config build/webpack.client.config.js --progress --hide-modules",
@@ -70,14 +70,12 @@
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "serve-favicon": "^2.5.0",
-    "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-no-browser-hacks": "^1.2.1",
