--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-vue": "^5.1.0",
     "express": "4.15.3",
+    "express-thymeleaf": "^0.2.0",
     "extract-css-chunks-webpack-plugin": "^3.3.2",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
@@ -79,6 +80,7 @@
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-no-browser-hacks": "^1.2.1",
+    "thymeleaf": "^0.14.0",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
