--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -29,6 +29,7 @@
     "build-entry-server-prod": "cross-env NODE_ENV=production SSR_ENV=ssrs webpack --config build/webpack.server.config.js --progress --hide-modules",
     "build": "./build/build.prod.sh",
     "prod": "yarn build && node ./test/dev-server.js",
+    "start-dev": "nodemon ./test/dev-server.js",
     "start": "node ./test/v8-server.js",
     "test": "echo 'No Tests'"
   },
@@ -39,8 +40,13 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
     "debug": "^4.1.1",
+    "html-encoding-sniffer": "^1.0.2",
+    "ip-regex": "^4.0.0",
+    "jsdom": "^13.2.0",
     "lru-cache": "4.1.0",
+    "pn": "^1.1.0",
     "source-map": "^0.7.3",
+    "tough-cookie": "^3.0.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.6",
