--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -50,6 +50,7 @@
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.6",
+    "vue-uweb": "^0.2.1",
     "vue-web-storage": "^3.0.0",
     "yallist": "^3.0.3"
   },
