Add winston to control log life

--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -20,7 +20,7 @@
     "clean": "rimraf dist",
     "lint": "eslint --ext .js,.vue,.html --ignore-path .gitignore --ignore-pattern !.eslintrc.js --ignore-pattern !.babelrc.js . --fix --color",
     "lint-css": "stylelint --config stylelint.config.js 'src/**/*.css' --fix --color",
-    "serve": "cross-env NODE_ENV=development SSR_ENV=c webpack-dev-server --config build/webpack.client.config.js --port 8888 --hot --inline --progress",
+    "serve": "cross-env NODE_ENV=development SSR_ENV=c webpack-dev-server --config build/webpack.client.config.js --progress --hide-modules",
     "build-entry-client-dev": "cross-env NODE_ENV=development SSR_ENV=ssrc webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build-entry-server-dev": "cross-env NODE_ENV=development SSR_ENV=ssrs webpack --config build/webpack.server.config.js --progress --hide-modules",
     "build-dev": "./build/build.dev.sh",
@@ -37,22 +37,14 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/runtime": "^7.3.1",
     "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
-    "debug": "^4.1.1",
-    "html-encoding-sniffer": "^1.0.2",
-    "ip-regex": "^4.0.0",
     "jsdom": "^13.2.0",
-    "lru-cache": "4.1.0",
-    "pn": "^1.1.0",
-    "source-map": "^0.7.3",
-    "tough-cookie": "^3.0.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.6",
     "vue-uweb": "^0.2.1",
     "vue-web-storage": "^3.0.0",
-    "yallist": "^3.0.3"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -89,6 +81,7 @@
     "stylelint-no-browser-hacks": "^1.2.1",
     "thymeleaf": "^0.14.0",
     "url-loader": "^1.1.2",
+    "vue-hot-reload-api": "^2.3.3",
     "vue-loader": "^15.6.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.6",
