--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "vue",
+  "name": "jvue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean": "rimraf dist",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev-build-entry-client": "vue-cli-service build --mode development",
+    "build-entry-client": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
@@ -26,6 +28,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.0",
     "node-sass": "^4.9.0",
+    "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
   },
