--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist",
-    "serve": "vue-cli-service serve",
-    "dev-build-entry-client": "vue-cli-service build --mode development",
+    "serve": "vue-cli-service serve --mode development src/entry-client.js",
+    "dev-build-entry-client": "vue-cli-service build --mode development src/entry-client.js",
     "build-entry-client": "vue-cli-service build",
+    "dev": "webpack-dev-server --help",
+    "build": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
