--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist",
-    "serve": "vue-cli-service serve --mode development src/entry-client.js",
-    "dev-build-entry-client": "cross-env SSR_ENV=client  vue-cli-service build --mode development src/entry-client.js",
-    "build-entry-client": "cross-env SSR_ENV=client vue-cli-service build src/entry-client.js",
+    "serve": "vue-cli-service serve",
+    "dev-build-entry-client": "cross-env SSR_ENV=client  vue-cli-service build --mode development",
+    "build-entry-client": "cross-env SSR_ENV=client vue-cli-service build",
     "dev": "webpack-dev-server --help",
-    "dev-build-entry-server": "cross-env SSR_ENV=server vue-cli-service build --mode development src/entry-server.js",
-    "build-entry-server": "cross-env SSR_ENV=server vue-cli-service build src/entry-server.js",
+    "dev-build-entry-server": "cross-env SSR_ENV=server vue-cli-service build --mode development --no-clean",
+    "build-entry-server": "cross-env SSR_ENV=server vue-cli-service build --no-clean",
     "dev-build": "yarn dev-build-entry-client && yarn dev-build-entry-server",
     "build": "yarn build-entry-client && yarn build-entry-server",
     "lint": "vue-cli-service lint",
@@ -39,7 +39,8 @@
     "rimraf": "^2.6.3",
     "sass-loader": "7.1.0",
     "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.29.5"
+    "webpack": "^4.29.5",
+    "webpack-node-externals": "^1.7.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
