No template with Vue CLI 3 Run success

--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "scripts": {
     "clean": "rimraf dist",
+    "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve",
     "dev-build-entry-client": "cross-env SSR_ENV=client  vue-cli-service build --mode development",
     "build-entry-client": "cross-env SSR_ENV=client vue-cli-service build",
-    "dev": "webpack-dev-server --help",
     "dev-build-entry-server": "cross-env SSR_ENV=server vue-cli-service build --mode development --no-clean",
     "build-entry-server": "cross-env SSR_ENV=server vue-cli-service build --no-clean",
-    "dev-build": "yarn dev-build-entry-client && yarn dev-build-entry-server",
-    "build": "yarn build-entry-client && yarn build-entry-server",
-    "lint": "vue-cli-service lint",
+    "dev-build": "yarn dev-build-entry-client && yarn dev-build-entry-server && yarn babel --presets=@babel/preset-env -o dist/server.js src/server.js",
+    "build": "yarn build-entry-client && yarn build-entry-server && yarn babel -o dist/server.js --presets=@babel/preset-env,minify src/server.js",
+    "dev": "webpack-dev-server --help",
+    "dev-start": "node tests/dev-server.js",
+    "start": "node tests/v8-server.js",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -21,6 +23,7 @@
     "vue-server-renderer": "^2.6.7"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
@@ -31,10 +34,14 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "babel-minify": "^0.5.0",
+    "babel-preset-minify": "^0.5.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "express": "^4.16.4",
     "lint-staged": "^8.1.0",
+    "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
     "rimraf": "^2.6.3",
     "sass-loader": "7.1.0",
