--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>1.0.6</version>
     <packaging>war</packaging>
     <name>jvue</name>
-    <description>Next light-weight,responsive project With Vue,webpack,Spring Boot and eclipse j2v8 Script engine for server-side-rendering</description>
+    <description>Next light-weight,responsive project With Vue,Vue CLI 3,webpack,Spring Boot and eclipse j2v8 Script engine for server-side-rendering</description>
 
     <properties>
         <java.version>1.8</java.version>
