--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -19,6 +19,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.6.7",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.7"
