--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -20,9 +20,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.13",
+    "circular-json": "^0.5.9",
     "vue": "^2.6.7",
     "vue-router": "^3.0.2",
-    "vue-server-renderer": "^2.6.7"
+    "vue-server-renderer": "^2.6.7",
+    "vue-uweb": "^0.2.1",
+    "vue-web-storage": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
