--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -10,13 +10,12 @@
     "build-entry-client": "cross-env SSR_ENV=client vue-cli-service build",
     "dev-build-entry-server": "cross-env SSR_ENV=server vue-cli-service build --mode development --no-clean",
     "build-entry-server": "cross-env SSR_ENV=server vue-cli-service build --no-clean",
-    "dev-build": "npm run dev-build-entry-client && npm run dev-build-entry-server && npm run babel --presets=@babel/preset-env -o dist/server.js src/server.js",
-    "build": "npm run build-entry-client && npm run build-entry-server && npm run babel -o dist/server.js --presets=@babel/preset-env,minify src/server.js",
-    "dev": "webpack-dev-server --help",
+    "dev-build": "npm run dev-build-entry-client && npm run dev-build-entry-server && node node_modules/@babel/cli/bin/babel --presets=@babel/preset-env -o dist/server.js src/server.js",
+    "build": "npm run build-entry-client && npm run build-entry-server && node node_modules/@babel/cli/bin/babel -o dist/server.js --presets=@babel/preset-env,minify src/server.js",
     "dev-start": "cross-env NODE_ENV=development node tests/dev-server.js",
     "prod-start": "cross-env NODE_ENV=production node tests/dev-server.js",
-    "start": "node tests/v8-server.js",
-    "test:unit": "vue-cli-service test:unit"
+    "v8-dev-start": "cross-env NODE_ENV=development node tests/v8-server.js",
+    "v8-prod-start": "cross-env NODE_ENV=production node tests/v8-server.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
