--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,7 +24,8 @@ jvue.admin.password.encode.enable=true
 # MyBatis
 mybatis.mapper-locations=classpath:mappers/*.xml
 # MySQL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:MySQL://39.104.66.135:3306/testcms?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=test
 spring.datasource.password=123456
