--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.13",
     "circular-json": "^0.5.9",
+    "url-search-params-polyfill": "^5.0.0",
     "v-toaster": "^1.0.3",
     "vue": "^2.6.7",
     "vue-router": "^3.0.2",
