--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "latest",
     "bootstrap-vue": "^2.0.0-rc.13",
     "circular-json": "^0.5.9",
+    "element-ui": "^2.6.1",
     "url-search-params-polyfill": "^5.0.0",
     "v-toaster": "^1.0.3",
     "vue": "^2.6.7",
