--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -23,6 +23,7 @@
     "bootstrap-vue": "^2.0.0-rc.13",
     "circular-json": "^0.5.9",
     "element-ui": "^2.6.1",
+    "font-awesome": "^4.7.0",
     "url-search-params-polyfill": "^5.0.0",
     "v-toaster": "^1.0.3",
     "vue": "^2.6.7",
