--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -12,6 +12,8 @@
     "build-entry-server": "cross-env SSR_ENV=server vue-cli-service build --no-clean",
     "dev-build": "npm run dev-build-entry-client && npm run dev-build-entry-server && node node_modules/@babel/cli/bin/babel --presets=@babel/preset-env -o dist/server.js src/server.js",
     "build": "npm run build-entry-client && npm run build-entry-server && node node_modules/@babel/cli/bin/babel -o dist/server.js --presets=@babel/preset-env,minify src/server.js",
+    "build-nossr": "npm run build-entry-client",
+    "dev-build-nossr": "npm run dev-build-entry-client",
     "dev-start": "cross-env NODE_ENV=development node tests/dev-server.js",
     "prod-start": "cross-env NODE_ENV=production node tests/dev-server.js",
     "v8-dev-start": "cross-env NODE_ENV=development node tests/v8-server.js",
